adding buttons, pictures and UI, first commit new changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
     <body>
         <h1>The Real Game For Gamers!</h1>
 
+        <section class="choices">
+            <div class="playerChoice">
+                <div class="playerScore">
+                    <h2>Player Score:</h2>
+                    <p id="playerPoints">0</p>
+                </div>
+                <div class="picJokenpoPlayer">
+                    <img src="imgs/rock-svgrepo-com.svg" alt="" />
+                </div>
+            </div>
+            <div class="vsP">
+                <p>VS</p>
+                <button class="fight">FIGHT</button>
+            </div>
+            <div class="computerChoice">
+                <div class="computerScore">
+                    <h2>Fake AI Score:</h2>
+                    <p id="computerPoints">0</p>
+                </div>
+                <div>
+                    <img
+                        src="imgs/question-mark-svgrepo-com.svg"
+                        alt=""
+                        class=""
+                    />
+                </div>
+            </div>
+        </section>
+        <div class="playerButtons">
+            <button class="playerRock">Rock</button>
+            <button class="playerPaper">Paper</button>
+            <button class="playerScissor">Scissor</button>
+        </div>
+
         <section class="scores">
             <div class="computerScore">
                 <h2>Fake AI Score:</h2>
