adjusting the pictures with the results

--- a/index.html
+++ b/index.html
@@ -53,22 +53,29 @@
                     <h2>Fake AI Score:</h2>
                     <p id="computerPoints">0</p>
                 </div>
-                <div>
-                    <img src="imgs/question-mark-svgrepo-com.svg" alt="" />
+                <div id="picJokenpoComputer">
                     <img
                         src="imgs/question-mark-svgrepo-com.svg"
                         alt=""
-                        class="hide"
+                        id="computerQuestion"
                     />
                     <img
-                        src="imgs/question-mark-svgrepo-com.svg"
+                        src="imgs/rock-svgrepo-com.svg"
                         alt=""
                         class="hide"
+                        id="computerRock computerPic"
                     />
                     <img
-                        src="imgs/question-mark-svgrepo-com.svg"
+                        src="imgs/paper-svgrepo-com.svg"
                         alt=""
-                        class="hide"
+                        class="hide computerPic"
+                        id="computerPaper"
+                    />
+                    <img
+                        src="imgs/scissor-svgrepo-com.svg"
+                        alt=""
+                        class="hide computerPic"
+                        id="computerScissor"
                     />
                 </div>
             </div>
