imgs and results working perfectly

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
                     <img
                         src="imgs/rock-svgrepo-com.svg"
                         alt=""
-                        class="hide"
-                        id="computerRock computerPic"
+                        class="computerPic hide"
+                        id="computerRock"
                     />
                     <img
                         src="imgs/paper-svgrepo-com.svg"
